[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Bestiary/Bestiary.gd" type="Script" id=1]
[ext_resource path="res://UI/Leaderboard/LeaderboardBG.tres" type="StyleBox" id=2]
[ext_resource path="res://UI/Assets/NokiaCellphone.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Assets/NokiaCellphone.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 6
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Bestiary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 210.0

[node name="Label" type="Label" parent="Margin/Content"]
margin_right = 340.0
margin_bottom = 14.0
text = "Bestiary"

[node name="Panel" type="Panel" parent="Margin/Content"]
margin_top = 18.0
margin_right = 340.0
margin_bottom = 200.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="Margin/Content/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Entries" type="HBoxContainer" parent="Margin/Content/Panel/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 330.0
margin_bottom = 172.0
size_flags_vertical = 3

[node name="List" type="Panel" parent="Margin/Content/Panel/Margin/Entries"]
margin_right = 100.0
margin_bottom = 162.0
rect_min_size = Vector2( 100, 0 )
custom_styles/panel = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="Margin/Content/Panel/Margin/Entries/List"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="List" type="VBoxContainer" parent="Margin/Content/Panel/Margin/Entries/List/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 95.0
margin_bottom = 157.0

[node name="Title" type="Label" parent="Margin/Content/Panel/Margin/Entries/List/Margin/List"]
margin_right = 90.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = SubResource( 3 )
text = "Enemies"
align = 1

[node name="Scroll" type="ScrollContainer" parent="Margin/Content/Panel/Margin/Entries/List/Margin/List"]
margin_top = 16.0
margin_right = 90.0
margin_bottom = 152.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ListItems" type="VBoxContainer" parent="Margin/Content/Panel/Margin/Entries/List/Margin/List/Scroll"]
margin_right = 90.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionPanel" type="Panel" parent="Margin/Content/Panel/Margin/Entries"]
margin_left = 104.0
margin_right = 320.0
margin_bottom = 162.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel"]
margin_right = 216.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Scroll" type="ScrollContainer" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 157.0
rect_clip_content = false
scroll_horizontal_enabled = false

[node name="DescriptionItems" type="VBoxContainer" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll"]
margin_right = 206.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IconName" type="HBoxContainer" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems"]
margin_right = 206.0
margin_bottom = 34.0

[node name="EnemyIcon" type="TextureRect" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems/IconName"]
margin_right = 34.0
margin_bottom = 34.0
rect_min_size = Vector2( 34, 34 )
rect_pivot_offset = Vector2( 17, 17 )
expand = true
stretch_mode = 6

[node name="Name" type="Label" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems/IconName"]
margin_left = 38.0
margin_top = 8.0
margin_right = 98.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
custom_fonts/font = SubResource( 1 )
text = "[Name]"

[node name="Stats" type="HBoxContainer" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems"]
margin_top = 38.0
margin_right = 206.0
margin_bottom = 46.0

[node name="StatHealth" type="Label" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems/Stats"]
margin_right = 12.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "HP:"

[node name="StatDefense" type="Label" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems/Stats"]
margin_left = 16.0
margin_right = 50.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
text = "Defense:"

[node name="Description" type="Label" parent="Margin/Content/Panel/Margin/Entries/DescriptionPanel/Margin/Scroll/DescriptionItems"]
margin_top = 50.0
margin_right = 206.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "[Description]"
autowrap = true
